--- a/docker/php/conf/php-dev.ini
+++ b/docker/php/conf/php-dev.ini
@@ -1868,5 +1868,5 @@ ldap.max_links = -1
 ; End:
 
 error_log = /var/log/php/php-error
-extension=redis.so
-extension=memcached.so
+;extension=redis.so
+;extension=memcached.so
