--- a/.env.docker
+++ b/.env.docker
@@ -8,3 +8,7 @@ DB_PORT=33068
 #nging
 NGINX_PORT=8083
 NGINX_DOMAIN=dev.hosea.com
+
+#test swoole webSocket on webSocket branch
+WEB_SOCKET_TEST_LIVE=80841
+WEB_SOCKET_TEST_CHAT=80851
